🐛 FIX: Actually fix overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@ html,
 body {
     background-color: var(--primary-background-color);
     color: var(--primary-font-color);
-    overflow: hidden;
+    overflow-x: hidden;
     max-width: 100vw;
     min-height: 100vh;
 }
